add methodts to user
